--- a/src/main/resources/templates/goodbye.mustache
+++ b/src/main/resources/templates/goodbye.mustache
@@ -1,12 +1,6 @@
-<html>
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
-</head>
-<body>
+{{>layouts/header}}
+<!-- content -->
+<div class="bg-dark text-white p-5">
     <h1>{{nickname}}님, 다음에 또 만나요!</h1>
-</body>
-</html>
+</div>
+{{>layouts/footer}}
