수정 버튼 추가 - 부트스트랩, modal trigger button

--- a/src/main/resources/templates/comments/_list.mustache
+++ b/src/main/resources/templates/comments/_list.mustache
@@ -3,6 +3,8 @@
         <div class="card m-2" id="comments-{{id}}">
             <div class="card-header">
                 {{nickname}}
+                <!-- 수정 버튼 추가 -->
+                <button class="btn btn-sm btn-outline-primary">수정</button>
             </div>
             <div class="card-body">
                 {{body}}
