--- a/src/main/resources/templates/comments/_list.mustache
+++ b/src/main/resources/templates/comments/_list.mustache
@@ -7,7 +7,11 @@
                 <button type="button"
                         class="btn btn-sm btn-outline-primary"
                         data-bs-toggle="modal"
-                        data-bs-target="#comment-edit-modal">수정</button>
+                        data-bs-target="#comment-edit-modal"
+                        data-bs-id="{{id}}"
+                        data-bs-nickname="{{nickname}}"
+                        data-bs-body="{{body}}"
+                        data-bs-article-id="{{articleId}}">수정</button>
             </div>
             <div class="card-body">
                 {{body}}
@@ -25,27 +29,48 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
-                <!-- 댓글 수정 폼 추가 -->
+                <!-- 댓글 수정 폼-->
                 <form>
-                    <!-- 닉네임 -->
+                    <!-- 닉네임 입력 -->
                     <div class="mb-3">
                         <label class="form-label">닉네임</label>
                         <input type="text" class="form-control form-control-sm" id="edit-comment-nickname">
                     </div>
-                    <!-- 댓글 본문 -->
+                    <!-- 댓글 본문 입력 -->
                     <div class="mb-3">
                         <label class="form-label">댓글 내용</label>
                         <textarea type="text" class="form-control form-control-sm" rows="3" id="edit-comment-body"></textarea>
                     </div>
-                    <!-- 히든값 -->
+                    <!-- 히든 인풋 -->
                     <input type="hidden" id="edit-comment-id">
                     <input type="hidden" id="edit-comment-article-id">
-                    <!-- 전송버튼 -->
+                    <!-- 전송 버튼 -->
                     <button type="button" class="btn btn-outline-primary btn-sm" id="comment-update-btn">수정 완료</button>
                 </form>
             </div>
         </div>
     </div>
-
-
 </div>
+<!-- 모달 이벤트 처리 -->
+<Script>
+    {
+        // 모달 요소 선택
+        const commentEditModal = document.querySelector("#comment-edit-modal");
+        // 모달 이벤트 감지
+        commentEditModal.addEventListener("show.bs.modal", function(event) {
+            // 트리거 버튼 선택
+            const triggerBtn = event.relatedTarget;
+            // 데이터 가져오기
+            const id = triggerBtn.getAttribute("data-bs-id");
+            const nickname = triggerBtn.getAttribute("data-bs-nickname");
+            const body = triggerBtn.getAttribute("data-bs-body");
+            const articleId = triggerBtn.getAttribute("data-bs-article-id");
+            //console.log(`${id}, ${nickname}, ${body}, ${articleId}`);
+            // 데이터를 반영
+            document.querySelector("#edit-comment-nickname").value = nickname;
+            document.querySelector("#edit-comment-body").value = body;
+            document.querySelector("#edit-comment-id").value = id;
+            document.querySelector("#edit-comment-article-id").value = articleId;
+        });
+    }
+</script>
