REST API 호출로 수정 - querySelector(), addEventListener(), fetch()

--- a/src/main/resources/templates/comments/_list.mustache
+++ b/src/main/resources/templates/comments/_list.mustache
@@ -73,4 +73,35 @@
             document.querySelector("#edit-comment-article-id").value = articleId;
         });
     }
+
+    {
+        // 수정 완료 버튼
+        const commentUpdateBtn = document.querySelector("#comment-update-btn");
+        // 클릭 이벤트 처리
+        commentUpdateBtn.addEventListener("click", function() {
+            // 수정 댓글 객체 생성
+            const comment = {
+                id: document.querySelector("#edit-comment-id").value,
+                nickname: document.querySelector("#edit-comment-nickname").value,
+                body: document.querySelector("#edit-comment-body").value,
+                article_id: document.querySelector("#edit-comment-article-id").value
+            };
+            console.log(comment);
+            // 수정 REST API 호출 - fetch()
+            const url = "/api/comments/" + comment.id;
+            fetch(url, {
+                method: "PATCH",
+                body: JSON.stringify(comment),
+                headers: {
+                    "Content-Type": "application/json"
+                }
+            }).then(response => {
+                // http 응답 코드에 따른 메시지 출력
+                const msg = (response.ok) ? "댓글이 수정 되었습니다." : "댓글 수정 실패..!";
+                alert(msg);
+                // 현재 페이지를 새로고침
+                window.location.reload();
+            });
+        });
+    }
 </script>
