--- a/src/main/resources/templates/comments/_list.mustache
+++ b/src/main/resources/templates/comments/_list.mustache
@@ -108,3 +108,18 @@
         });
     }
 </script>
+
+<!-- 댓글 삭제 -->
+<Script>
+    {
+        // 삭제 버튼 선택
+        const commentDeleteBtns = document.querySelectorAll(".comment-delete-btn");
+        // 삭제 버튼 이벤트를 처리
+        commentDeleteBtns.forEach(btn => {
+            // 각 버튼의 이벤트 처리를 등록
+            btn.addEventListener("click", () => {
+                console.log("삭제 버튼이 클릭되었습니다..!");
+            });
+        });
+    }
+</script>
