--- a/src/main/resources/templates/comments/_list.mustache
+++ b/src/main/resources/templates/comments/_list.mustache
@@ -124,6 +124,20 @@
                 // 삭제 댓글 id 가져오기
                 const commentId = commentDeleteBtn.getAttribute("data-comment-id");
                 console.log(`삭제 버튼 클릭: ${commentId}번 댓글`);
+                // 삭제 API 호출 및 처리
+                const url = `/api/comments/${commentId}`;
+                fetch(url, {
+                    method: "DELETE"
+                }).then(response => {
+                    // 댓글 삭제 실패 처리
+                    if (!response.ok) {
+                        alert("댓글 삭제 실패..!");
+                        return;
+                    }
+                    // 삭제 성공 시, 댓글을 화면에서 지움!
+                    const target = document.querySelector(`#comments-${commentId}`);
+                    target.remove();
+                });
             });
         });
     }
