--- a/src/main/resources/templates/index/index.mustache
+++ b/src/main/resources/templates/index/index.mustache
@@ -46,14 +46,20 @@
                         if (response.ok) {
                             return response.text();
                         } else if (response.status === 401) {
+                            contentDiv.innerHTML = `
+                            <p>로그인이 필요합니다.</p>
+                            <button type="button" class="btn btn-primary w-100" onclick="redirectToLogin()">Login</button>
+                        `;
                             // 토큰 만료 시 처리
                             return response.text().then((errorMessage) => {
                                 localStorage.clear();
+                                alert(errorMessage);
                                 throw new Error(errorMessage); // 서버에서 반환한 메시지를 에러로 던짐
                             });
                         } else {
                             throw new Error('로그인이 필요합니다.');
                         }
+
                     })
                     .then(data => {
                         contentDiv.innerHTML = `<p>환영합니다, ${data}님!</p>
@@ -67,11 +73,6 @@
                     })
                     .catch(error => {
                         console.error('Error:', error);
-                        // 에러 메시지와 로그인 버튼 표시
-                        contentDiv.innerHTML = `
-                            <p>${error.message}</p>
-                            <button type="button" class="btn btn-primary w-100" onclick="redirectToLogin()">Login</button>
-                        `;
                     });
         }
     }
@@ -158,8 +159,16 @@
             const timeLeft = expirationTime - currentTime;
 
             if (timeLeft <= 0) {
-                document.getElementById('timer').textContent = '토큰이 만료되었습니다.';
+                const contentDiv = document.getElementById('content');
                 clearInterval(timerInterval);  // 타이머 중지
+                localStorage.clear();
+                contentDiv.innerHTML = `
+                            <p>로그인이 필요합니다.</p>
+                            <button type="button" class="btn btn-primary w-100" onclick="redirectToLogin()">Login</button>
+                        `;
+                alert("토큰 만료");
+
+                // document.getElementById('timer').textContent = '토큰이 만료되었습니다.';
                 return;
             }
 
