--- a/src/main/resources/templates/index/index.mustache
+++ b/src/main/resources/templates/index/index.mustache
@@ -17,20 +17,7 @@
     </div>
 </div>
 
-<!-- Toast 컴포넌트 추가 -->
-<div class="toast-container position-fixed top-0 p-3">
-    <div id="customToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
-            <strong class="me-auto">알림</strong>
-            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
-        </div>
-        <div class="toast-body" id="toastMessage">
-            <!-- 오류 메시지가 여기에 표시됩니다 -->
-        </div>
-    </div>
-</div>
-
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
+{{>utility/toast}}
 
 <script>
     let indexUserCheck = {
@@ -68,7 +55,7 @@
                                 //         this.contentDiv.innerHTML = this.contentLogin;
                                 //         return response.text().then((errorMessage) => {
                                 //             localStorage.clear();
-                                //             this.showToast(errorMessage);
+                                //             showToast(errorMessage);
                                 //             throw new Error(errorMessage);
                                 //         });
                                 //     } else {
@@ -110,7 +97,7 @@
                     })
                     .then(data => {
                         if (data) {
-                            this.showToast("로그아웃되었습니다.");
+                            showToast("로그아웃되었습니다.");
                             localStorage.clear();
                             clearInterval(indexUserCheck.timerInterval);
                             indexUserCheck.timerInterval = null;
@@ -143,7 +130,7 @@
                         if (data) {
                             localStorage.setItem('accessToken', data.accessToken);
                             this.accessToken = data.accessToken;
-                            this.showToast("토큰이 갱신되었습니다.");
+                            showToast("토큰이 갱신되었습니다.");
                             this.initializeTimer();
                         }
                     })
@@ -173,8 +160,9 @@
                     clearInterval(this.timerInterval);
                     localStorage.clear();
                     indexUserCheck.timerInterval = null;
-                    this.contentDiv.innerHTML = this.contentLogin;
-                    this.showToast("토큰이 만료되었습니다.");
+                    //this.contentDiv.innerHTML = this.contentLogin;
+                    this.loginCheck();
+                    showToast("토큰이 만료되었습니다.");
                     return;
                 }
 
@@ -187,12 +175,6 @@
             updateTimer();
         },
 
-        showToast(message) {
-            const toastMessage = document.getElementById('toastMessage');
-            toastMessage.textContent = message;
-            const toastElement = new bootstrap.Toast(document.getElementById('customToast'));
-            toastElement.show();
-        }
     };
 
     document.addEventListener('DOMContentLoaded', () => indexUserCheck.init());
