--- a/src/main/resources/templates/login/login.mustache
+++ b/src/main/resources/templates/login/login.mustache
@@ -23,6 +23,9 @@
         </form>
     </div>
 </div>
+
+{{>utility/toast}}
+
 </body>
 </html>
 
@@ -48,13 +51,13 @@
 
         // 사용자 ID와 비밀번호 유효성 검사
         if (!userId) {
-            alert("사용자ID를 입력해주세요.");
+            showToast("사용자ID를 입력해주세요.");
             document.getElementById("userId").focus();
             return; // 함수 종료
         }
 
         if (!password) {
-            alert("비밀번호를 입력해주세요.");
+            showToast("비밀번호를 입력해주세요.");
             document.getElementById("password").focus();
             return; // 함수 종료
         }
@@ -77,7 +80,7 @@
                         window.location.href = '/index';
                     } else {
                         // 로그인 실패 시 메시지 출력
-                        alert(data.message);
+                        showToast(data.message);
                     }
                 })
                 .catch(error => console.error('Error:', error));
