--- a/src/main/resources/templates/login/login.mustache
+++ b/src/main/resources/templates/login/login.mustache
@@ -12,8 +12,8 @@
         <h3 class="card-title text-center mb-4">Login</h3>
         <form id="loginForm">
             <div class="mb-3">
-                <label for="userId" class="form-label">Username</label>
-                <input type="text" class="form-control" id="userId" placeholder="Enter username" autofocus required>
+                <label for="userId" class="form-label">UserId</label>
+                <input type="text" class="form-control" id="userId" placeholder="Enter userId" autofocus required>
             </div>
             <div class="mb-3">
                 <label for="password" class="form-label">Password</label>
