로그인: 공백/한글 입력 방지

--- a/src/main/resources/templates/login/login.mustache
+++ b/src/main/resources/templates/login/login.mustache
@@ -34,12 +34,30 @@
     inputUserId.addEventListener('keydown', function(event) {
         keydownEnter(event);
     });
+    inputUserId.addEventListener('input', function(event) {
+        removeInvalidInput(event);
+    });
     const inputPassword = document.getElementById("password");
     inputPassword.addEventListener('keydown', function(event) {
         keydownEnter(event);
     });
-
+    inputPassword.addEventListener('input', function(event) {
+        removeInvalidInput(event);
+    });
+    // 한글 또는 공백이 입력될 때 제거하는 함수
+    function removeInvalidInput(e) {
+        // 한글과 공백을 제거하는 정규 표현식
+        e.target.value = e.target.value.replace(/[ㄱ-ㅎ|ㅏ-ㅣ|가-힣\s]/g, '');
+    }
     function keydownEnter(e) {
+        if (e.keyCode === 32) { // 스페이스바를 감지
+            e.preventDefault(); // 기본 동작(띄어쓰기)을 막음
+            showToast("공백은 입력할 수 없다!");
+        }
+        if (e.keyCode === 229) { // 한글 입력 중간 상태를 감지
+            e.preventDefault(); // 기본 동작을 막음
+            showToast("한글은 입력할 수 없다!");
+        }
         if(e.keyCode == 13) { // enter는 13이다!
             submitForm();
         }
