--- a/src/main/resources/templates/index/index.mustache
+++ b/src/main/resources/templates/index/index.mustache
@@ -1,21 +1,16 @@
-<!DOCTYPE html>
-<html lang="ko">
-<head>
-    <meta charset="UTF-8"/>
-    <title>Index Page</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-          rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-</head>
-<body class="d-flex align-items-center justify-content-center" style="height: 100vh; background-color: #f8f9fa;">
-<div class="card shadow-sm" style="width: 300px;">
-    <div class="card-body text-center">
-        <h5 class="card-title">Index Page</h5>
-        <hr/>
-        <div id="content">
-            <!-- 여기에 동적으로 내용이 추가됩니다 -->
+{{>layouts/header1}}
+<div class="d-flex align-items-center justify-content-center" style="height: 100vh; background-color: #f8f9fa;">
+    <div class="card shadow-sm" style="width: 300px;">
+        <div class="card-body text-center">
+            <h5 class="card-title">Index Page</h5>
+            <hr/>
+            <div id="content">
+                <!-- 여기에 동적으로 내용이 추가됩니다 -->
+            </div>
         </div>
     </div>
 </div>
+
 
 {{>utility/toast}}
 
@@ -80,9 +75,11 @@
         redirectToLogin() {
             window.location.href = '/login';
         },
+
         redirectToJoin() {
             window.location.href = '/join';
         },
+
         logout() {
             fetch('/api/v1/user/logout', {
                 method: 'GET',
@@ -182,5 +179,5 @@
 
     document.addEventListener('DOMContentLoaded', () => indexUserCheck.init());
 </script>
-</body>
-</html>
+
+{{>layouts/footer1}}
