--- a/src/main/resources/templates/utility/toast.mustache
+++ b/src/main/resources/templates/utility/toast.mustache
@@ -1,5 +1,5 @@
 <!-- Toast 컴포넌트 추가 -->
-<div class="toast-container position-fixed top-0 p-3">
+<div class="toast-container position-fixed top-0 end-0 p-3">
     <div id="customToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
         <div class="toast-header">
             <strong class="me-auto">알림</strong>
@@ -10,12 +10,5 @@
         </div>
     </div>
 </div>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-    function showToast(message) {
-        const toastMessage = document.getElementById('toastMessage');
-        toastMessage.textContent = message;
-        const toastElement = new bootstrap.Toast(document.getElementById('customToast'));
-        toastElement.show();
-    }
-</script>
+
+<script src="/js/utility/toast.js"></script>
