<한국어 문법> 은/는, 이/가, 을/를, 와/과 구분

--- a/src/main/resources/templates/login/login.mustache
+++ b/src/main/resources/templates/login/login.mustache
@@ -6,11 +6,11 @@
             <form id="loginForm">
                 <div class="mb-3">
                     <label for="userId" class="form-label">UserId</label>
-                    <input type="text" alt="사용자ID" class="form-control" id="userId" placeholder="Enter userId" maxlength="30" autofocus required>
+                    <input type="text"  class="form-control" id="userId" placeholder="Enter userId" autofocus required alt="사용자아이디" maxlength="30">
                 </div>
                 <div class="mb-3">
                     <label for="password" class="form-label">Password</label>
-                    <input type="password" alt="비밀번호" class="form-control" id="password" placeholder="Enter password" maxlength="30" required>
+                    <input type="password" class="form-control" id="password" placeholder="Enter password" required alt="비밀번호" maxlength="30">
                 </div>
                 <button type="button" class="btn btn-primary w-100" onclick="loginForm.submitForm()">Login</button>
             </form>
