회원가입 기능 추가

--- a/src/main/resources/templates/login/join.mustache
+++ b/src/main/resources/templates/login/join.mustache
@@ -24,4 +24,5 @@
 </div>
 {{>utility/toast}}
 <script src="/js/app/join.js"></script>
+<script src="/js/utility/regexpCheck.js"></script>
 {{>layouts/footer1}}
